2020-03-29

* substantial reorg
* trying to use standard urn generators
* state -> region
* confirmed -> tests_positive

2020-03-27

* fix BC
* fix NB
* deal with NBSP in normalize

2020-03-24

* improve pull code ca-bc.cmo
* add "@id" and "@context" to ca.cases

2020-03-23

* fixed a date bug where March 18 was duplicated becaue DST
* add US data from https://covidtracking.com/
* manually update newfoundland cases
* pull canadian government testing data

2020-03-22

* cape verde + east timor
* add Newfoundland manual dataset

2020-03-21

* add semantics to ca-??.cmo
* fix ontario and bc
* add another level of BUILD
  (push is now done at BUILD_0)
* standardize "#" for errors
* detect errors in BUILD

2020-03-20

* add Quebec cases data
* start of universal URN system
* Bahamas renamed
* added link to Google Sheet
* added Consensas graphic

2020-03-19

* reorg datasets so we can make URNs
* add (but not merge) Canadian Cases
* pull data
* add timeline of events
* make sure data is automatically added by Git

2020-03-18

* auto checkin pulled raw data
* documentation updates
* update to Consensas

2020-03-17 ☘️

* pulled data
* some reorganization of data folders
* add BC tests
* add data/cooked/cook.yaml to make datasets soft
* add AB tests
* pulled new data
* added missing country codes
* add SK tests
* ownership changed from dpjanes to Consensas
* add NS tests
* add MB tests
* add PE tests
* add NB tests

2020-03-16

* README + CHANGELOG
* remove old population dataset
* add StatsCan population + age cohorts
* add premier, CMO and COVID websites
* add testing (ON)
* expanding testing (ON)

2020-03-15 🔪🗡

* Initial version
* deaths / recoveries / cases
* doctors
* ICU
* population
* spending