@@ -8,56 +8,70 @@ items:
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-01-26'
     date: '2020-01-26'
     tests_negative: null
-    tests_pending: 9
     tests_positive: null
+    tests_confirmed: null
+    tests_probable: 0
+    tests_pending: 9
     tests_resolved: null
     deaths: null
     tests_approved: null
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-01-27'
     date: '2020-01-27'
     tests_negative: null
-    tests_pending: 19
     tests_positive: null
+    tests_confirmed: null
+    tests_probable: 0
+    tests_pending: 19
     tests_resolved: null
     deaths: null
     tests_approved: null
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-01-28'
     date: '2020-01-28'
     tests_negative: null
-    tests_pending: 11
     tests_positive: 1
+    tests_confirmed: 1
+    tests_probable: 0
+    tests_pending: 11
     tests_resolved: null
     deaths: null
     tests_approved: null
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-01-30'
     date: '2020-01-30'
     tests_negative: null
-    tests_pending: 27
     tests_positive: 2
+    tests_confirmed: 2
+    tests_probable: 0
+    tests_pending: 27
     tests_resolved: null
     deaths: null
     tests_approved: null
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-01-31'
     date: '2020-01-31'
     tests_negative: null
-    tests_pending: 17
     tests_positive: 2
+    tests_confirmed: 2
+    tests_probable: 0
+    tests_pending: 17
     tests_resolved: null
     deaths: null
     tests_approved: null
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-03'
     date: '2020-02-03'
     tests_negative: null
-    tests_pending: 29
     tests_positive: 3
+    tests_confirmed: 3
+    tests_probable: 0
+    tests_pending: 29
     tests_resolved: null
     deaths: null
     tests_approved: null
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-04'
     date: '2020-02-04'
     tests_negative: 90
-    tests_pending: 34
     tests_positive: 3
+    tests_confirmed: 3
+    tests_probable: 0
+    tests_pending: 34
     tests_resolved: null
     deaths: null
     tests_approved: 139
@@ -65,8 +79,10 @@ items:
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-05'
     date: '2020-02-05'
     tests_negative: 96
-    tests_pending: 43
     tests_positive: 3
+    tests_confirmed: 3
+    tests_probable: 0
+    tests_pending: 43
     tests_resolved: null
     deaths: null
     tests_approved: 150
@@ -74,8 +90,10 @@ items:
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-06'
     date: '2020-02-06'
     tests_negative: 104
-    tests_pending: 62
     tests_positive: 3
+    tests_confirmed: 3
+    tests_probable: 0
+    tests_pending: 62
     tests_resolved: null
     deaths: null
     tests_approved: 169
@@ -83,8 +101,10 @@ items:
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-08'
     date: '2020-02-08'
     tests_negative: 130
-    tests_pending: 39
     tests_positive: 3
+    tests_confirmed: 3
+    tests_probable: 0
+    tests_pending: 39
     tests_resolved: null
     deaths: null
     tests_approved: 197
@@ -92,8 +112,10 @@ items:
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-10'
     date: '2020-02-10'
     tests_negative: 167
-    tests_pending: 8
     tests_positive: 3
+    tests_confirmed: 3
+    tests_probable: 0
+    tests_pending: 8
     tests_resolved: null
     deaths: null
     tests_approved: 259
@@ -101,8 +123,10 @@ items:
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-11'
     date: '2020-02-11'
     tests_negative: 184
-    tests_pending: 19
     tests_positive: 3
+    tests_confirmed: 3
+    tests_probable: 0
+    tests_pending: 19
     tests_resolved: null
     deaths: null
     tests_approved: 285
@@ -110,385 +134,471 @@ items:
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-12'
     date: '2020-02-12'
     tests_negative: 257
+    tests_positive: 3
+    tests_confirmed: 2
+    tests_probable: 1
     tests_pending: 9
-    tests_positive: 2
     tests_resolved: 1
     deaths: null
     tests_approved: 313
-    tests: 259
+    tests: 260
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-13'
     date: '2020-02-13'
     tests_negative: 306
+    tests_positive: 3
+    tests_confirmed: 2
+    tests_probable: 1
     tests_pending: 15
-    tests_positive: 2
     tests_resolved: 1
     deaths: null
     tests_approved: 340
-    tests: 308
+    tests: 309
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-14'
     date: '2020-02-14'
     tests_negative: 353
+    tests_positive: 3
+    tests_confirmed: 2
+    tests_probable: 1
     tests_pending: 8
-    tests_positive: 2
     tests_resolved: 1
     deaths: null
     tests_approved: 364
-    tests: 355
+    tests: 356
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-17'
     date: '2020-02-17'
     tests_negative: 399
+    tests_positive: 3
+    tests_confirmed: 2
+    tests_probable: 1
     tests_pending: 0
-    tests_positive: 2
     tests_resolved: 1
     deaths: null
     tests_approved: 402
-    tests: 401
+    tests: 402
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-18'
     date: '2020-02-18'
     tests_negative: 418
+    tests_positive: 3
+    tests_confirmed: 2
+    tests_probable: 1
     tests_pending: 0
-    tests_positive: 2
     tests_resolved: 1
     deaths: null
     tests_approved: 421
-    tests: 420
+    tests: 421
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-19'
     date: '2020-02-19'
     tests_negative: 436
+    tests_positive: 3
+    tests_confirmed: 2
+    tests_probable: 1
     tests_pending: 17
-    tests_positive: 2
     tests_resolved: 1
     deaths: null
     tests_approved: 456
-    tests: 438
+    tests: 439
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-20'
     date: '2020-02-20'
     tests_negative: 462
+    tests_positive: 3
+    tests_confirmed: 1
+    tests_probable: 2
     tests_pending: 14
-    tests_positive: 1
     tests_resolved: 2
     deaths: null
     tests_approved: 479
-    tests: 463
+    tests: 465
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-21'
     date: '2020-02-21'
     tests_negative: 483
+    tests_positive: 3
+    tests_confirmed: 0
+    tests_probable: 3
     tests_pending: 12
-    tests_positive: 0
     tests_resolved: 3
     deaths: null
     tests_approved: 498
-    tests: 483
+    tests: 486
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-24'
     date: '2020-02-24'
     tests_negative: 540
+    tests_positive: 4
+    tests_confirmed: 1
+    tests_probable: 3
     tests_pending: 9
-    tests_positive: 1
     tests_resolved: 3
     deaths: null
     tests_approved: 553
-    tests: 541
+    tests: 544
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-25'
     date: '2020-02-25'
     tests_negative: 568
+    tests_positive: 4
+    tests_confirmed: 1
+    tests_probable: 3
     tests_pending: 21
-    tests_positive: 1
     tests_resolved: 3
     deaths: null
     tests_approved: 593
-    tests: 569
+    tests: 572
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-26'
     date: '2020-02-26'
     tests_negative: 610
+    tests_positive: 4
+    tests_confirmed: 1
+    tests_probable: 3
     tests_pending: 14
-    tests_positive: 1
     tests_resolved: 3
     deaths: null
     tests_approved: 629
-    tests: 611
+    tests: 614
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-27'
     date: '2020-02-27'
     tests_negative: 672
+    tests_positive: 5
+    tests_confirmed: 2
+    tests_probable: 3
     tests_pending: 21
-    tests_positive: 2
     tests_resolved: 3
     deaths: null
     tests_approved: 699
-    tests: 674
+    tests: 677
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-02-28'
     date: '2020-02-28'
     tests_negative: 739
+    tests_positive: 6
+    tests_confirmed: 3
+    tests_probable: 3
     tests_pending: 22
-    tests_positive: 3
     tests_resolved: 3
     deaths: null
     tests_approved: 768
-    tests: 742
+    tests: 745
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-02'
     date: '2020-03-02'
     tests_negative: 975
+    tests_positive: 18
+    tests_confirmed: 15
+    tests_probable: 3
     tests_pending: 12
-    tests_positive: 15
     tests_resolved: 3
     deaths: null
     tests_approved: 1005
-    tests: 990
+    tests: 993
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-03'
     date: '2020-03-03'
     tests_negative: 1061
+    tests_positive: 20
+    tests_confirmed: 17
+    tests_probable: 3
     tests_pending: 45
-    tests_positive: 17
     tests_resolved: 3
     deaths: null
     tests_approved: 1126
-    tests: 1078
+    tests: 1081
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-04'
     date: '2020-03-04'
     tests_negative: 1216
+    tests_positive: 20
+    tests_confirmed: 17
+    tests_probable: 3
     tests_pending: 102
-    tests_positive: 17
     tests_resolved: 3
     deaths: null
     tests_approved: 1338
-    tests: 1233
+    tests: 1236
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-05'
     date: '2020-03-05'
     tests_negative: 1466
+    tests_positive: 22
+    tests_confirmed: 18
+    tests_probable: 4
     tests_pending: 78
-    tests_positive: 18
     tests_resolved: 4
     deaths: null
     tests_approved: 1566
-    tests: 1484
+    tests: 1488
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-06'
     date: '2020-03-06'
     tests_negative: 1665
+    tests_positive: 26
+    tests_confirmed: 22
+    tests_probable: 4
     tests_pending: 72
-    tests_positive: 22
     tests_resolved: 4
     deaths: null
     tests_approved: 1763
-    tests: 1687
+    tests: 1691
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-07'
     date: '2020-03-07'
     tests_negative: 1918
+    tests_positive: 28
+    tests_confirmed: 24
+    tests_probable: 4
     tests_pending: 36
-    tests_positive: 24
     tests_resolved: 4
     deaths: null
     tests_approved: 1982
-    tests: 1942
+    tests: 1946
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-08'
     date: '2020-03-08'
     tests_negative: 2094
+    tests_positive: 29
+    tests_confirmed: 25
+    tests_probable: 4
     tests_pending: 55
-    tests_positive: 25
     tests_resolved: 4
     deaths: null
     tests_approved: 2178
-    tests: 2119
+    tests: 2123
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-09'
     date: '2020-03-09'
     tests_negative: 2347
+    tests_positive: 35
+    tests_confirmed: 31
+    tests_probable: 4
     tests_pending: 22
-    tests_positive: 31
     tests_resolved: 4
     deaths: null
     tests_approved: 2404
-    tests: 2378
+    tests: 2382
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-10'
     date: '2020-03-10'
     tests_negative: 2599
+    tests_positive: 36
+    tests_confirmed: 31
+    tests_probable: 5
     tests_pending: 112
-    tests_positive: 31
     tests_resolved: 5
     deaths: null
     tests_approved: 2747
-    tests: 2630
+    tests: 2635
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-11'
     date: '2020-03-11'
     tests_negative: 2888
+    tests_positive: 42
+    tests_confirmed: 37
+    tests_probable: 5
     tests_pending: 465
-    tests_positive: 37
     tests_resolved: 5
     deaths: null
     tests_approved: 3395
-    tests: 2925
+    tests: 2930
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-12'
     date: '2020-03-12'
     tests_negative: 3590
+    tests_positive: 59
+    tests_confirmed: 54
+    tests_probable: 5
     tests_pending: 536
-    tests_positive: 54
     tests_resolved: 5
     deaths: null
     tests_approved: 4185
-    tests: 3644
+    tests: 3649
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-13'
     date: '2020-03-13'
     tests_negative: 4470
+    tests_positive: 79
+    tests_confirmed: 74
+    tests_probable: 5
     tests_pending: 580
-    tests_positive: 74
     tests_resolved: 5
     deaths: null
     tests_approved: 5129
-    tests: 4544
+    tests: 4549
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-14'
     date: '2020-03-14'
     tests_negative: 5606
+    tests_positive: 103
+    tests_confirmed: 98
+    tests_probable: 5
     tests_pending: 939
-    tests_positive: 98
     tests_resolved: 5
     deaths: null
     tests_approved: 6648
-    tests: 5704
+    tests: 5709
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-15'
     date: '2020-03-15'
     tests_negative: 7004
+    tests_positive: 145
+    tests_confirmed: 140
+    tests_probable: 5
     tests_pending: 1316
-    tests_positive: 140
     tests_resolved: 5
     deaths: null
     tests_approved: 8465
-    tests: 7144
+    tests: 7149
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-16'
     date: '2020-03-16'
     tests_negative: 8464
+    tests_positive: 177
+    tests_confirmed: 172
+    tests_probable: 5
     tests_pending: 1537
-    tests_positive: 172
     tests_resolved: 5
     deaths: null
     tests_approved: 10178
-    tests: 8636
+    tests: 8641
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-17'
     date: '2020-03-17'
     tests_negative: 9415
+    tests_positive: 189
+    tests_confirmed: 183
+    tests_probable: 6
     tests_pending: 1567
-    tests_positive: 183
     tests_resolved: 5
     deaths: 1
     tests_approved: 11171
-    tests: 9598
+    tests: 9604
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-18'
     date: '2020-03-18'
     tests_negative: 10305
+    tests_positive: 214
+    tests_confirmed: 208
+    tests_probable: 6
     tests_pending: 3378
-    tests_positive: 208
     tests_resolved: 5
     deaths: 1
     tests_approved: 13897
-    tests: 10513
+    tests: 10519
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-19'
     date: '2020-03-19'
     tests_negative: 12421
+    tests_positive: 258
+    tests_confirmed: 251
+    tests_probable: 7
     tests_pending: 3971
-    tests_positive: 251
     tests_resolved: 5
     deaths: 2
     tests_approved: 16650
-    tests: 12672
+    tests: 12679
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-20'
     date: '2020-03-20'
     tests_negative: 13718
+    tests_positive: 318
+    tests_confirmed: 311
+    tests_probable: 7
     tests_pending: 5475
-    tests_positive: 311
     tests_resolved: 5
     deaths: 2
     tests_approved: 19511
-    tests: 14029
+    tests: 14036
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-21'
     date: '2020-03-21'
     tests_negative: 15768
+    tests_positive: 377
+    tests_confirmed: 369
+    tests_probable: 8
     tests_pending: 7239
-    tests_positive: 369
     tests_resolved: 6
     deaths: 2
     tests_approved: 23384
-    tests: 16137
+    tests: 16145
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-22'
     date: '2020-03-22'
     tests_negative: 17634
+    tests_positive: 425
+    tests_confirmed: 412
+    tests_probable: 13
     tests_pending: 8361
-    tests_positive: 412
     tests_resolved: 8
     deaths: 5
     tests_approved: 26420
-    tests: 18046
+    tests: 18059
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-23'
     date: '2020-03-23'
     tests_negative: 19586
+    tests_positive: 503
+    tests_confirmed: 489
+    tests_probable: 14
     tests_pending: 8417
-    tests_positive: 489
     tests_resolved: 8
     deaths: 6
     tests_approved: 28506
-    tests: 20075
+    tests: 20089
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-24'
     date: '2020-03-24'
     tests_negative: 21795
+    tests_positive: 588
+    tests_confirmed: 572
+    tests_probable: 16
     tests_pending: 10074
-    tests_positive: 572
     tests_resolved: 8
     deaths: 8
     tests_approved: 32457
-    tests: 22367
+    tests: 22383
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-25'
     date: '2020-03-25'
     tests_negative: 24458
+    tests_positive: 688
+    tests_confirmed: 667
+    tests_probable: 21
     tests_pending: 10489
-    tests_positive: 667
     tests_resolved: 8
     deaths: 13
     tests_approved: 35635
-    tests: 25125
+    tests: 25146
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-26'
     date: '2020-03-26'
     tests_negative: 26727
+    tests_positive: 858
+    tests_confirmed: 835
+    tests_probable: 23
     tests_pending: 10965
-    tests_positive: 835
     tests_resolved: 8
     deaths: 15
     tests_approved: 38550
-    tests: 27562
+    tests: 27585
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-27'
     date: '2020-03-27'
     tests_negative: 29967
+    tests_positive: 993
+    tests_confirmed: 967
+    tests_probable: 26
     tests_pending: 10074
-    tests_positive: 967
     tests_resolved: 8
     deaths: 18
     tests_approved: 41032
-    tests: 30934
+    tests: 30960
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-28'
     date: '2020-03-28'
     tests_negative: 33240
+    tests_positive: 1144
+    tests_confirmed: 1117
+    tests_probable: 27
     tests_pending: 8690
-    tests_positive: 1117
     tests_resolved: 8
     deaths: 19
     tests_approved: 43072
-    tests: 34357
+    tests: 34384
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-29'
     date: '2020-03-29'
     tests_negative: 40630
+    tests_positive: 1355
+    tests_confirmed: 1324
+    tests_probable: 31
     tests_pending: 7203
-    tests_positive: 1324
     tests_resolved: 8
     deaths: 23
     tests_approved: 49186
-    tests: 41954
+    tests: 41985
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-30'
     date: '2020-03-30'
     tests_negative: null
+    tests_positive: 1706
+    tests_confirmed: 1252
+    tests_probable: 454
     tests_pending: 5651
-    tests_positive: 1252
     tests_resolved: 431
     deaths: 23
     tests_approved: 48461
   - '@id': 'urn:covid:data.ontario.ca:tests:ca-on:2020-03-31'
     date: '2020-03-31'
     tests_negative: null
+    tests_positive: 1966
+    tests_confirmed: 1399
+    tests_probable: 567
     tests_pending: 4280
-    tests_positive: 1399
     tests_resolved: 534
     deaths: 33
     tests_approved: 51629
