@@ -1,3 +1,9 @@
+2020-03-31
+
+* "tests_positive" includes "tests_confirmed" + "tests_probable"
+* NB is now manual scraping
+* ON fix up semantics for test
+
 2020-03-29
 
 * substantial reorg
